interactivity remains by using JavaScript

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div id="leftHeading">
                         <div id="left">
                             <ul>
-                                <li><a href="#"><span id="instagram"><i
+                                <li><a href="#" id="instaggramLink"><span id="instagram"><i
                                                 class="fa-brands fa-instagram"></i>&nbspInstagram</span></a></li>
                                 <li><a href="#"><span id="github"><i
                                                 class="fa-brands fa-git-alt"></i>&nbsp;GitHub</span></a></li>
@@ -46,9 +46,8 @@
             </div>
         </div>
     </header>
-    <main style="color: aqua;">
+    <main style="color: rgb(9, 255, 0);">
         <p>&nbsp;</p>
-        <p>voluptatem accusantium quo ducimus.</p>
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium nostrum facere voluptatum dolorem porro
             architecto. Cupiditate nemo eius mollitia laudantium harum saepe doloremque porro unde officia, esse
@@ -87,57 +86,44 @@
             consectetur delectus? Corrupti vel laboriosam officiis repellendus rem, blanditiis nulla voluptatem unde
             aspernatur exercitationem et quod cum!
         </p>
-        <!-- <p>
+        <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium nostrum facere voluptatum dolorem porro
             architecto. Cupiditate nemo eius mollitia laudantium harum saepe doloremque porro unde officia, esse
             perferendis, est nostrum architecto tempora voluptatem impedit ut aliquid, exercitationem eligendi molestiae
             rerum similique iure. Nihil possimus placeat nisi quibusdam rerum a, ducimus sint ad. Maiores a, deserunt
             voluptate aspernatur distinctio deleniti voluptas, magnam laudantium nihil molestiae modi, natus facere
-            beatae.
-            Illum nostrum eaque rerum necessitatibus. Sequi eum tempora quidem in esse reprehenderit provident ab
-            repellendus unde praesentium? Error maiores corrupti accusantium non vitae porro, dolorem magnam ab laborum
-            quam
-            harum, fugit, debitis enim fugiat et blanditiis? Autem molestias repellat architecto minus blanditiis
-            delectus.
-            Illo similique qui fuga sunt neque adipisci tempore ducimus. Ipsa maiores aliquid consequuntur sed atque eos
-            ea
-            repudiandae, blanditiis in expedita reprehenderit. Totam veritatis unde doloremque, eligendi consequuntur
-            impedit ipsa blanditiis odio, aut sunt dolore asperiores temporibus nobis sint explicabo omnis nesciunt
-            ducimus
-            labore ab deserunt. Quis dicta voluptatem, totam aliquid doloribus dolorem quo vitae natus fugiat soluta
-            quos
-            iste molestiae eligendi commodi. Voluptatum explicabo dolor obcaecati dicta corrupti, nemo tempore dolorem.
-            Minima deleniti quam modi eligendi nobis, obcaecati exercitationem, quae repudiandae nam itaque fugiat sit
-            praesentium optio et nihil, eius tenetur maiores veniam soluta quasi? Earum deleniti facilis harum modi
-            voluptatem doloremque vero a dolore? Beatae harum nisi molestias a laborum voluptate provident dicta magnam
-            ipsa, hic, voluptates inventore officiis nostrum blanditiis sit laudantium sequi autem veniam sapiente
-            aspernatur itaque atque doloribus fugiat libero. Eaque repudiandae nisi in, optio libero culpa sed magnam!
-            Molestiae delectus cum odio animi nam suscipit quis, aspernatur impedit esse voluptates labore totam
-            assumenda
-            laborum eveniet? Recusandae quis aut beatae atque? Ab nemo dignissimos corporis nihil obcaecati dolor
-            officia
-            architecto temporibus adipisci eius, earum labore atque quia minus consectetur voluptates voluptatem.
-            Commodi,
-            eos nam dolore debitis facere, blanditiis asperiores error, magnam soluta quam iste nostrum magni aut
-            molestiae
-            repellat corrupti at iusto dignissimos! Dolorem itaque ullam minima sint tenetur rerum amet. Ex saepe velit
-            voluptates sapiente quasi eaque debitis non nostrum sit neque. Veritatis id autem explicabo quis voluptatum
-            quod
-            quibusdam quam sequi? Quaerat vitae laudantium dolor harum tempore. Tenetur et nam totam nisi eveniet eos
-            quam
-            error pariatur voluptas esse distinctio veniam adipisci ipsum enim doloremque at hic iste quisquam similique
-            fugit minima inventore dolorem, asperiores repudiandae. Quod, architecto neque possimus totam ullam minima
-            itaque dicta optio vero. Fugit, qui similique. Exercitationem aliquam, veritatis quos illum rem perferendis
-            quidem id iste molestiae eum ex consectetur. Ea nostrum similique nesciunt quis ad eius nemo incidunt magni
-            culpa laboriosam est, quia quas accusamus cum corporis perferendis odio animi, quaerat delectus rerum. Illo
-            maxime earum possimus, pariatur id ea delectus quae harum reiciendis sapiente in obcaecati! Pariatur eius
-            quod
-            nam quia ab incidunt laborum vero facilis obcaecati alias nulla, placeat distinctio dicta tempora debitis
-            dolore
+            beatae. Illum nostrum eaque rerum necessitatibus. Sequi eum tempora quidem in esse reprehenderit provident
+            ab repellendus unde praesentium? Error maiores corrupti accusantium non vitae porro, dolorem magnam ab
+            laborum quam harum, fugit, debitis enim fugiat et blanditiis? Autem molestias repellat architecto minus
+            blanditiis delectus. Illo similique qui fuga sunt neque adipisci tempore ducimus. Ipsa maiores aliquid
+            consequuntur sed atque eos ea repudiandae, blanditiis in expedita reprehenderit. Totam veritatis unde
+            doloremque, eligendi consequuntur impedit ipsa blanditiis odio, aut sunt dolore asperiores temporibus nobis
+            sint explicabo omnis nesciunt ducimus labore ab deserunt. Quis dicta voluptatem, totam aliquid doloribus
+            dolorem quo vitae natus fugiat soluta quos iste molestiae eligendi commodi. Voluptatum explicabo dolor
+            obcaecati dicta corrupti, nemo tempore dolorem. Minima deleniti quam modi eligendi nobis, obcaecati
+            exercitationem, quae repudiandae nam itaque fugiat sit praesentium optio et nihil, eius tenetur maiores
+            veniam soluta quasi? Earum deleniti facilis harum modi voluptatem doloremque vero a dolore? Beatae harum
+            nisi molestias a laborum voluptate provident dicta magnam ipsa, hic, voluptates inventore officiis nostrum
+            blanditiis sit laudantium sequi autem veniam sapiente aspernatur itaque atque doloribus fugiat libero. Eaque
+            repudiandae nisi in, optio libero culpa sed magnam! Molestiae delectus cum odio animi nam suscipit quis,
+            aspernatur impedit esse voluptates labore totam assumenda laborum eveniet? Recusandae quis aut beatae atque?
+            Ab nemo dignissimos corporis nihil obcaecati dolor officia architecto temporibus adipisci eius, earum labore
+            atque quia minus consectetur voluptates voluptatem. Commodi, eos nam dolore debitis facere, blanditiis
+            asperiores error, magnam soluta quam iste nostrum magni aut molestiae repellat corrupti at iusto
+            dignissimos! Dolorem itaque ullam minima sint tenetur rerum amet. Ex saepe velit voluptates sapiente quasi
+            eaque debitis non nostrum sit neque. Veritatis id autem explicabo quis voluptatum quod quibusdam quam sequi?
+            Quaerat vitae laudantium dolor harum tempore. Tenetur et nam totam nisi eveniet eos quam error pariatur
+            voluptas esse distinctio veniam adipisci ipsum enim doloremque at hic iste quisquam similique fugit minima
+            inventore dolorem, asperiores repudiandae. Quod, architecto neque possimus totam ullam minima itaque dicta
+            optio vero. Fugit, qui similique. Exercitationem aliquam, veritatis quos illum rem perferendis quidem id
+            iste molestiae eum ex consectetur. Ea nostrum similique nesciunt quis ad eius nemo incidunt magni culpa
+            laboriosam est, quia quas accusamus cum corporis perferendis odio animi, quaerat delectus rerum. Illo maxime
+            earum possimus, pariatur id ea delectus quae harum reiciendis sapiente in obcaecati! Pariatur eius quod nam
+            quia ab incidunt laborum vero facilis obcaecati alias nulla, placeat distinctio dicta tempora debitis dolore
             ipsa nostrum. Sed quod ducimus, vitae minus aliquam temporibus odit minima error perspiciatis recusandae,
             consectetur delectus? Corrupti vel laboriosam officiis repellendus rem, blanditiis nulla voluptatem unde
             aspernatur exercitationem et quod cum!
-        </p> -->
+        </p>
     </main>
 </body>
 
