added menu button

--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Author Name: Raushan -->
     <meta name="author" content="Raushan kumar">
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <title>Stop</title>
+    <!-- End Google fonts -->
+    <title>Portfolio</title>
+    <!-- Adding stylesheet(css) -->
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <!-- Font Awesome fonts -->
     <script src="https://kit.fontawesome.com/f61c139840.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- Header_Bar -->
     <header>
-        <div class="headerFlex" id="headerFlex">
-            <div class="headFlexItem" id="headTop">
-                <div id="rightHalf">
-                    <div id="rightHeading">
+        <div class="hfx" id="hfx">
+            <!-- Portfolio Owner Name -->
+            <div class="hfxi" id="htp">
+                <div id="rhf">
+                    <div id="rhng">
                         <span id="right">
                             <strong>
                                 Raushan's&nbsp;Portfolio
@@ -28,54 +34,71 @@
                     </div>
                 </div>
             </div>
-            <div class="headFlexItem" id="headDown">
-                <div id="leftHalf">
-                    <div id="leftHeading">
+            <!-- End Portfolio owner Name -->
+            <!-- Direct contact header -->
+            <div class="hfxi" id="hdwn">
+                <div id="lhf">
+                    <div id="lhng">
                         <div id="left">
+                            <!-- Navigation_bar button -->
+                            <nav id="mbar">
+                                <a class="mbar" id="mbar-list">
+                                    <span class="bar"></span>
+                                    <span class="bar"></span>
+                                    <span class="bar"></span>
+                                    <span class="bar"></span>
+                                </a>
+                            </nav>
+                            <!-- End Navigation_bar button -->
+                            <!-- Direct contact un-ordered list -->
                             <ul>
-                                <li><a href="#" id="instaggramLink"><span id="instagram"><i
-                                                class="fa-brands fa-instagram"></i>&nbspInstagram</span></a></li>
-                                <li><a href="#"><span id="github"><i
+                                <li><a href="#" id="instaggramLink"><span id="igm"><i
+                                                class="fa-brands fa-igm"></i>&nbspInstagram</span></a></li>
+                                <li><a href="#"><span id="git"><i
                                                 class="fa-brands fa-git-alt"></i>&nbsp;GitHub</span></a></li>
-                                <li><a href="#"><span id="contact"><i
+                                <li><a href="#"><span id="cnct"><i
                                                 class="fa-regular fa-envelope"></i>&nbsp;Contact</span></a></li>
                             </ul>
+                            <!-- End direct contact list -->
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- End direct contact header -->
         </div>
     </header>
+    <!-- End Header_Bar -->
+    <!-- Content -->
     <main style="color: rgb(9, 255, 0);">
-        <div class="mainSection" id="mainSection">
-            <div id="firstSection">
+        <div class="msec" id="msec">
+            <div id="sec1">
                 <ul class="show-case-flex" id="show-case-flex">
                     <li id="show-case-grid-first">C Programming</li>
                     <li id="show-case-grid-second">Java Core Programming</li>
                     <li id="show-case-grid-third">Python Programming</li>
                     <li id="show-case-grid-fourth">SQL(MySQL)</li>
                     <li id="show-case-grid-fifth">NoSQL(MongoDB)</li>
-                    <li id="show-case-grid-sixth">HTML</li>
-                    <li id="show-case-grid-seventh">CSS</li>
-                    <li id="show-case-grid-eighth">JavaSript(vanilla)</li>
+                    <li id="show-case-grid-sixth">Machine learning</li>
                     <li id="show-case-grid-nineth">Git & GitHub</li>
-                    <li id="show-case-grid-tenth">MS Excel</li>
                 </ul>
             </div>
-            <div id="secondSection">
+            <div id="sec2">
                 Day-by-day challanges that you must aware from this
             </div>
-            <div id="thirdSection">
+            <div id="sec3">
                 Solutions and the experiances I gain
             </div>
-            <div id="fourthSection">
+            <div id="sec4">
                 Dedications to do and the status what I have done
             </div>
-            <div id="fifthSection">
+            <div id="sec5">
                 Insights and Lessons that I learned and you should look at glance
             </div>
         </div>
     </main>
+    <!-- End Contents -->
+    <!-- Adding JavaScript -->
+    <script src="script.js"></script>
 </body>
 
 </html>
