--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <!-- Direct contact un-ordered list -->
                             <ul>
                                 <li><a href="#" id="instaggramLink"><span id="igm"><i
-                                                class="fa-brands fa-igm"></i>&nbspInstagram</span></a></li>
+                                                class="fa-brands fa-instagram"></i>&nbspInstagram</span></a></li>
                                 <li><a href="#"><span id="git"><i
                                                 class="fa-brands fa-git-alt"></i>&nbsp;GitHub</span></a></li>
                                 <li><a href="#"><span id="cnct"><i
