NavBar transit & transformed

--- a/index.html
+++ b/index.html
@@ -72,12 +72,26 @@
     <main>
         <nav class="navBar" id="navBar">
             <div class="navBar-menu" id="navBar-menu">
-                <div class="navBar-full" id="navBar-full">
+                <div class="navBar-full " id="navBar-full">
                     <div id="navSection-1">
                         <div class="logo" id="Programming-logo">
                             logo </div>
                         <div class="nav-menu-1" id="menu-1">
                             Programming
+                            <div class="Programming-languages" id="Programming-languages">
+                                <div id="C-Programming">
+                                    C Programming
+                                </div>
+                                <div id="Java-Programming">
+                                    Java Programming
+                                </div>
+                                <div id="JEE-Programming">
+                                    JEE Programming
+                                </div>
+                                <div id="Python-Programming">
+                                    Python Programming
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div id="navSection-2">
