shifted main-content below navBar

--- a/index.html
+++ b/index.html
@@ -121,45 +121,49 @@
                 </div>
             </div>
         </nav>
-        <div class="lorem" style="color: green;">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. A at ipsam fuga harum officiis excepturi,
-            voluptatum, ab eius ullam, quasi asperiores repellat laborum ea ipsum debitis quos aspernatur
-            voluptatibus consequatur sit rem. Dolorem, distinctio fugiat! Rerum consectetur quasi ad quia illum
-            quibusdam neque quo ex aliquam repellat cum, quos sequi omnis amet dolore! Doloremque unde minima odit,
-            quos ipsam incidunt nobis quae! Nam magnam rem quibusdam voluptatem suscipit aliquid, magni architecto
-            repellendus eaque temporibus ipsam similique autem sit adipisci deserunt quia aut numquam laudantium
-            iusto corporis assumenda. Eaque pariatur perferendis odit delectus, nesciunt vero sed quaerat molestias.
-            Temporibus alias voluptatum voluptate animi. Beatae hic minus nostrum laboriosam adipisci modi culpa
-            quia ea deleniti fuga, atque, labore non delectus quidem quod, unde voluptates autem doloremque dolore
-            magni veniam id facere enim. Placeat qui mollitia, iste possimus sint nihil accusantium harum quod.
-            Quaerat dolore voluptate laudantium ab perferendis rem ducimus velit iste libero quasi esse quam vitae
-            sit ipsa accusamus vel, animi nesciunt aliquid culpa vero fugiat soluta aperiam. Est, vitae qui!
-            Distinctio necessitatibus asperiores nihil velit commodi corrupti non cum voluptates tenetur veniam
-            quibusdam, placeat dolorem et maiores voluptatem ab? Maiores aperiam soluta eius qui, possimus laborum
-            magni. Vero veniam cumque, quasi voluptas amet, saepe numquam quibusdam quidem cum dolorem architecto
-            quod dicta assumenda nesciunt eaque autem quia ducimus ea fuga sunt id dolores. Quidem, facere dolore?
-            Non, laudantium dolorem. Accusantium praesentium quia, blanditiis, eligendi recusandae inventore
-            possimus ducimus vero rem eveniet fugit veritatis voluptates nostrum repellat, dolorem sed tempora
-            itaque quaerat ex voluptatem dolores error. Iure deserunt consequatur esse quis dolorum sit velit nemo
-            alias totam non voluptates temporibus tenetur aut tempora molestiae, libero aspernatur! Nulla dicta
-            officiis vitae nemo ex beatae ad eaque velit, molestiae maiores numquam ratione excepturi optio
-            assumenda, praesentium tempore qui laborum cum enim, quos quae tenetur! Nam sunt nostrum rerum incidunt
-            dicta molestias dolore est totam expedita ex possimus tempore aut, quia ratione? Soluta, totam
-            cupiditate! Ratione doloremque necessitatibus maiores, veniam deserunt voluptate vero beatae cumque,
-            repellendus sed qui nobis nisi amet quas similique consequuntur. Placeat aut aliquid fugit? Iste, eaque
-            quia amet dignissimos quas minus doloribus consequuntur sit. Quasi facere dolore sint sed, sunt atque
-            labore porro distinctio, quaerat nemo, deserunt commodi voluptatum! Nulla ratione quasi eveniet magni
-            deserunt corrupti incidunt, neque tempore, fugiat, laboriosam earum dicta voluptate qui sit suscipit
-            iusto voluptas inventore ipsum vero iure dolorem id! Quos pariatur placeat ducimus nam veritatis
-            nesciunt iure eum corporis, officia id numquam eius provident dolorem suscipit temporibus. Commodi
-            cumque labore reprehenderit incidunt, maxime, explicabo alias culpa saepe nulla nemo similique obcaecati
-            perspiciatis accusantium, a consectetur quam earum placeat ex quibusdam! Aut repellendus officiis illo
-            aliquam laudantium placeat vitae pariatur saepe excepturi inventore aperiam iusto, ratione ad animi fuga
-            mollitia cupiditate dolorem ab reprehenderit, dolorum voluptatem tenetur. Nam suscipit aspernatur nemo
-            in nostrum, totam blanditiis cum aliquid voluptatibus, illo est! Aut neque molestiae maxime unde, ipsa
-            repudiandae. Iusto rem ea nobis voluptates qui! Rem iure ex, iusto enim soluta dolorem culpa nesciunt omnis
-            voluptate ratione!
+        <div class="main-content" id="main-content">
+            <div class="lorem" style="color: green;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A at ipsam fuga harum officiis excepturi,
+                voluptatum, ab eius ullam, quasi asperiores repellat laborum ea ipsum debitis quos aspernatur
+                voluptatibus consequatur sit rem. Dolorem, distinctio fugiat! Rerum consectetur quasi ad quia illum
+                quibusdam neque quo ex aliquam repellat cum, quos sequi omnis amet dolore! Doloremque unde minima odit,
+                quos ipsam incidunt nobis quae! Nam magnam rem quibusdam voluptatem suscipit aliquid, magni architecto
+                repellendus eaque temporibus ipsam similique autem sit adipisci deserunt quia aut numquam laudantium
+                iusto corporis assumenda. Eaque pariatur perferendis odit delectus, nesciunt vero sed quaerat molestias.
+                Temporibus alias voluptatum voluptate animi. Beatae hic minus nostrum laboriosam adipisci modi culpa
+                quia ea deleniti fuga, atque, labore non delectus quidem quod, unde voluptates autem doloremque dolore
+                magni veniam id facere enim. Placeat qui mollitia, iste possimus sint nihil accusantium harum quod.
+                Quaerat dolore voluptate laudantium ab perferendis rem ducimus velit iste libero quasi esse quam vitae
+                sit ipsa accusamus vel, animi nesciunt aliquid culpa vero fugiat soluta aperiam. Est, vitae qui!
+                Distinctio necessitatibus asperiores nihil velit commodi corrupti non cum voluptates tenetur veniam
+                quibusdam, placeat dolorem et maiores voluptatem ab? Maiores aperiam soluta eius qui, possimus laborum
+                magni. Vero veniam cumque, quasi voluptas amet, saepe numquam quibusdam quidem cum dolorem architecto
+                quod dicta assumenda nesciunt eaque autem quia ducimus ea fuga sunt id dolores. Quidem, facere dolore?
+                Non, laudantium dolorem. Accusantium praesentium quia, blanditiis, eligendi recusandae inventore
+                possimus ducimus vero rem eveniet fugit veritatis voluptates nostrum repellat, dolorem sed tempora
+                itaque quaerat ex voluptatem dolores error. Iure deserunt consequatur esse quis dolorum sit velit nemo
+                alias totam non voluptates temporibus tenetur aut tempora molestiae, libero aspernatur! Nulla dicta
+                officiis vitae nemo ex beatae ad eaque velit, molestiae maiores numquam ratione excepturi optio
+                assumenda, praesentium tempore qui laborum cum enim, quos quae tenetur! Nam sunt nostrum rerum incidunt
+                dicta molestias dolore est totam expedita ex possimus tempore aut, quia ratione? Soluta, totam
+                cupiditate! Ratione doloremque necessitatibus maiores, veniam deserunt voluptate vero beatae cumque,
+                repellendus sed qui nobis nisi amet quas similique consequuntur. Placeat aut aliquid fugit? Iste, eaque
+                quia amet dignissimos quas minus doloribus consequuntur sit. Quasi facere dolore sint sed, sunt atque
+                labore porro distinctio, quaerat nemo, deserunt commodi voluptatum! Nulla ratione quasi eveniet magni
+                deserunt corrupti incidunt, neque tempore, fugiat, laboriosam earum dicta voluptate qui sit suscipit
+                iusto voluptas inventore ipsum vero iure dolorem id! Quos pariatur placeat ducimus nam veritatis
+                nesciunt iure eum corporis, officia id numquam eius provident dolorem suscipit temporibus. Commodi
+                cumque labore reprehenderit incidunt, maxime, explicabo alias culpa saepe nulla nemo similique obcaecati
+                perspiciatis accusantium, a consectetur quam earum placeat ex quibusdam! Aut repellendus officiis illo
+                aliquam laudantium placeat vitae pariatur saepe excepturi inventore aperiam iusto, ratione ad animi fuga
+                mollitia cupiditate dolorem ab reprehenderit, dolorum voluptatem tenetur. Nam suscipit aspernatur nemo
+                in nostrum, totam blanditiis cum aliquid voluptatibus, illo est! Aut neque molestiae maxime unde, ipsa
+                repudiandae. Iusto rem ea nobis voluptates qui! Rem iure ex, iusto enim soluta dolorem culpa nesciunt
+                omnis
+                voluptate ratione!
+            </div>
         </div>
+
     </main>
     <!-- End Contents -->
     <!-- Adding JavaScript -->
