--- a/index.html
+++ b/index.html
@@ -4,98 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Author Name: Raushan -->
-    <meta name="author" content="Raushan kumar">
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <!-- End Google fonts -->
+    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="subclass$events.css">
     <title>Portfolio</title>
-    <!-- Adding stylesheet(css) -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome fonts -->
-    <script src="https://kit.fontawesome.com/f61c139840.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- Header_Bar -->
-    <header>
-        <div class="hfx" id="hfx">
-            <!-- Portfolio Owner Name -->
-            <div class="hfxi" id="htp">
-                <div id="rhf">
-                    <div id="rhng">
-                        <span id="right">
-                            <strong>
-                                Raushan's&nbsp;Portfolio
-                            </strong>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- End Portfolio owner Name -->
-            <!-- Direct contact header -->
-            <div class="hfxi" id="hdwn">
-                <div id="lhf">
-                    <div id="lhng">
-                        <div id="left">
-                            <!-- Navigation_bar button -->
-                            <nav id="mbar">
-                                <a class="mbar" id="mbar-list">
-                                    <span class="bar"></span>
-                                    <span class="bar"></span>
-                                    <span class="bar"></span>
-                                    <span class="bar"></span>
-                                </a>
-                            </nav>
-                            <!-- End Navigation_bar button -->
-                            <!-- Direct contact un-ordered list -->
-                            <ul>
-                                <li><a href="#" id="instaggramLink"><span id="igm"><i
-                                                class="fa-brands fa-instagram"></i>&nbspInstagram</span></a></li>
-                                <li><a href="#"><span id="git"><i
-                                                class="fa-brands fa-git-alt"></i>&nbsp;GitHub</span></a></li>
-                                <li><a href="#"><span id="cnct"><i
-                                                class="fa-regular fa-envelope"></i>&nbsp;Contact</span></a></li>
-                            </ul>
-                            <!-- End direct contact list -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End direct contact header -->
+    <header class="head">
+        <div class="Profile">
+            <div id="Profile-Logo">Profile-Logo</div>
+        </div>
+        <div class="navList">
+            <nav>
+                <ul id="navList">
+                    <li><a href="#">What we do</a></li>
+                    <li><a href="#">Achievements</a></li>
+                    <li><a href="#">Memories</a></li>
+                    <li><a href="#">Get in Touch</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-    <!-- End Header_Bar -->
-    <!-- Content -->
+
     <main>
-        <div class="gridSection" id="gridSection">
-            <div class="gridItem-main-navbar" id="gridItem-main-navbar">
-                <nav class="navBar" id="navBar">
-                    <div class="navBar-menu" id="navBar-menu">
-                        <div class="navBar-full " id="navBar-full">
-                            <div class="text" id="text">
-                                
-                            </div>
-                        </div>
-                    </div>
-            </div>
+        <div class="head">
+            <div class="contents">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, animi iusto? Nisi, nihil temporibus, illo fugiat illum nemo a voluptatem iure recusandae minus dicta libero fugit vero ipsum totam magnam?
+            Odio adipisci animi id quidem amet neque voluptate a atque aspernatur eos! Numquam vel voluptatum fuga deleniti voluptate, corrupti autem eveniet, quam repellat maxime libero hic quisquam laboriosam earum iste!
+            Repudiandae, accusamus non. Modi sed molestiae quas earum iure non animi ipsam exercitationem dolorem, tenetur commodi eius asperiores necessitatibus, explicabo veniam, tempora ipsa nulla. In pariatur vel ipsam reprehenderit accusantium?
+            Fugit maiores perferendis libero eius aperiam fugiat, at repudiandae error praesentium tenetur provident eum ullam temporibus exercitationem harum aliquid optio reprehenderit quae iure laboriosam explicabo esse! Dolores perferendis earum laboriosam?
+            Ab doloremque aut sunt commodi quo, ea aliquid. Velit quos in est, animi, voluptas impedit fugit esse a asperiores dolorem beatae officiis! Molestias ullam, eaque iste velit inventore adipisci earum.</div>
+            <div class="contents">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo laudantium itaque unde nihil rem? Error temporibus maxime nesciunt eaque dolores nostrum, reiciendis ut quod! Sed incidunt iusto soluta. Ex, quaerat.
+            Possimus laudantium enim tempora soluta, quasi ut perspiciatis molestias architecto nemo expedita eaque, ratione tempore ea iste quia veniam. Qui repudiandae nostrum enim reiciendis voluptate fugit doloribus illum eius impedit.
+            Quam cupiditate cumque ut temporibus ad accusamus hic ratione culpa odio possimus, aspernatur architecto, aliquam, cum repellendus. Optio quam, saepe eum numquam natus dignissimos facere autem amet aliquid quos fugit.
+            Dolorum explicabo adipisci, voluptatibus molestiae numquam quo magni fuga distinctio tempore? Facere incidunt, ducimus repellat, quidem, blanditiis quas cumque libero dignissimos minus nesciunt reprehenderit iusto nemo numquam suscipit ratione dolores?
+            Repellendus suscipit dolore cupiditate quibusdam. Placeat accusantium ullam perferendis maiores nulla. Nesciunt modi minima repellendus porro. Facilis fugiat, harum ducimus quae, numquam corporis consequuntur odit minus quo laborum accusamus aut.
+            Unde delectus voluptatum non. Soluta voluptatibus deserunt iusto consectetur, amet blanditiis, quos repellendus nostrum aspernatur laborum sequi tempore impedit doloribus autem sunt molestias dolorum natus magni eum saepe odit dolor?
+            Minima hic vel dolorum quae, magnam officiis fugit voluptate officia. Excepturi, minima explicabo atque eum molestias error, modi mollitia, praesentium sed laboriosam nesciunt quis voluptates voluptatem molestiae incidunt? Facere, quaerat?
+            Aspernatur commodi esse aut blanditiis sequi autem in! Eius natus repudiandae, cum quis vel dolorem! Voluptates officia sunt minus labore ullam ex autem quia quis commodi omnis! Cum, porro minus.
+            Fugiat corrupti excepturi qui deleniti numquam sed sint cum possimus, adipisci quas culpa id porro, velit voluptate? Voluptate commodi labore illo culpa? Ipsam error labore ex quae, id cupiditate molestiae.
+            Sint cumque sit, vel fuga numquam eligendi doloremque officiis enim dolorum harum et voluptates qui assumenda veritatis totam sequi quisquam delectus corporis. Hic sit dolores, officiis eum nostrum magnam tempora.</div>
+            <div class="contents">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo laudantium itaque unde nihil rem? Error temporibus maxime nesciunt eaque dolores nostrum, reiciendis ut quod! Sed incidunt iusto soluta. Ex, quaerat.
+            Possimus laudantium enim tempora soluta, quasi ut perspiciatis molestias architecto nemo expedita eaque, ratione tempore ea iste quia veniam. Qui repudiandae nostrum enim reiciendis voluptate fugit doloribus illum eius impedit.
+            Quam cupiditate cumque ut temporibus ad accusamus hic ratione culpa odio possimus, aspernatur architecto, aliquam, cum repellendus. Optio quam, saepe eum numquam natus dignissimos facere autem amet aliquid quos fugit.
+            Dolorum explicabo adipisci, voluptatibus molestiae numquam quo magni fuga distinctio tempore? Facere incidunt, ducimus repellat, quidem, blanditiis quas cumque libero dignissimos minus nesciunt reprehenderit iusto nemo numquam suscipit ratione dolores?
+            Repellendus suscipit dolore cupiditate quibusdam. Placeat accusantium ullam perferendis maiores nulla. Nesciunt modi minima repellendus porro. Facilis fugiat, harum ducimus quae, numquam corporis consequuntur odit minus quo laborum accusamus aut.
+            Unde delectus voluptatum non. Soluta voluptatibus deserunt iusto consectetur, amet blanditiis, quos repellendus nostrum aspernatur laborum sequi tempore impedit doloribus autem sunt molestias dolorum natus magni eum saepe odit dolor?
+            Minima hic vel dolorum quae, magnam officiis fugit voluptate officia. Excepturi, minima explicabo atque eum molestias error, modi mollitia, praesentium sed laboriosam nesciunt quis voluptates voluptatem molestiae incidunt? Facere, quaerat?
+            Aspernatur commodi esse aut blanditiis sequi autem in! Eius natus repudiandae, cum quis vel dolorem! Voluptates officia sunt minus labore ullam ex autem quia quis commodi omnis! Cum, porro minus.
+            Fugiat corrupti excepturi qui deleniti numquam sed sint cum possimus, adipisci quas culpa id porro, velit voluptate? Voluptate commodi labore illo culpa? Ipsam error labore ex quae, id cupiditate molestiae.
+            Sint cumque sit, vel fuga numquam eligendi doloremque officiis enim dolorum harum et voluptates qui assumenda veritatis totam sequi quisquam delectus corporis. Hic sit dolores, officiis eum nostrum magnam tempora.</div>
         </div>
-        <div class="gridItem-main-contents" id="gridItem-main-contents">
-            <div class="main-content" id="main-content">
-                <div class="main-back" id="main-back">
-
-                </div>
-            </div>
-        </div>
-        </div>
-
-
     </main>
-    <!-- End Contents -->
-    <!-- Adding JavaScript -->
-    <script src="script.js"></script>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
